update the order transactions